--- a/Sales.ipynb
+++ b/Sales.ipynb
@@ -299,14 +299,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b076efc3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "id": "00725369",
    "metadata": {},
@@ -324,27 +316,6 @@
    "source": [
     "all_data['Month'] = all_data['Order Date'].str[0:2]\n",
     "all_data['Month'] = all_data['Month'].astype('int')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "f84c7849",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index([], dtype='int64')"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "all_data[all_data['Month'] == 'Or'].index"
    ]
   },
   {
@@ -367,14 +338,6 @@
    "source": [
     "all_data['sales'] = all_data['Price Each'] * all_data['Quantity Ordered']"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2c1bdd30",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -716,7 +679,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\navee\\AppData\\Local\\Temp\\ipykernel_6532\\3842191188.py:1: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "C:\\Users\\navee\\AppData\\Local\\Temp\\ipykernel_3864\\3842191188.py:1: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  all_data['Order Date'] = pd.to_datetime(all_data['Order Date'])\n"
      ]
     }
@@ -789,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
    "id": "dde4133a",
    "metadata": {
     "scrolled": true
@@ -921,7 +884,7 @@
        "4   Los Angeles     9  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -932,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "id": "0a305794",
    "metadata": {},
    "outputs": [
@@ -940,7 +903,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\navee\\AppData\\Local\\Temp\\ipykernel_6532\\2555456646.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\navee\\AppData\\Local\\Temp\\ipykernel_3864\\2555456646.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1198,7 +1161,7 @@
        "[14128 rows x 11 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1211,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 31,
    "id": "81d24f7a",
    "metadata": {},
    "outputs": [],
@@ -1221,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 32,
    "id": "d2902a86",
    "metadata": {},
    "outputs": [
@@ -1266,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 34,
    "id": "134f4604",
    "metadata": {},
    "outputs": [
@@ -1274,35 +1237,35 @@
      "data": {
       "text/plain": [
        "Product\n",
-       "USB-C Charging Cable          21859\n",
-       "Lightning Charging Cable      21610\n",
-       "AAA Batteries (4-pack)        20612\n",
-       "AA Batteries (4-pack)         20558\n",
-       "Wired Headphones              18849\n",
-       "Apple Airpods Headphones      15525\n",
-       "Bose SoundSport Headphones    13298\n",
-       "27in FHD Monitor               7498\n",
-       "iPhone                         6840\n",
-       "27in 4K Gaming Monitor         6225\n",
-       "34in Ultrawide Monitor         6174\n",
-       "Google Phone                   5522\n",
-       "Flatscreen TV                  4794\n",
-       "Macbook Pro Laptop             4721\n",
-       "ThinkPad Laptop                4126\n",
-       "20in Monitor                   4098\n",
-       "Vareebadd Phone                2065\n",
+       "AAA Batteries (4-pack)        30986\n",
+       "AA Batteries (4-pack)         27615\n",
+       "USB-C Charging Cable          23931\n",
+       "Lightning Charging Cable      23169\n",
+       "Wired Headphones              20524\n",
+       "Apple Airpods Headphones      15637\n",
+       "Bose SoundSport Headphones    13430\n",
+       "27in FHD Monitor               7541\n",
+       "iPhone                         6847\n",
+       "27in 4K Gaming Monitor         6239\n",
+       "34in Ultrawide Monitor         6192\n",
+       "Google Phone                   5529\n",
+       "Flatscreen TV                  4813\n",
+       "Macbook Pro Laptop             4725\n",
+       "ThinkPad Laptop                4128\n",
+       "20in Monitor                   4126\n",
+       "Vareebadd Phone                2068\n",
        "LG Washing Machine              666\n",
        "LG Dryer                        646\n",
-       "Name: Product, dtype: int64"
+       "Name: Quantity Ordered, dtype: int32"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "all_data.groupby('Product')['Product'].count().sort_values(ascending = False)"
+    "all_data.groupby('Product')['Quantity Ordered'].sum().sort_values(ascending = False)"
    ]
   },
   {
@@ -1311,7 +1274,7 @@
    "metadata": {},
    "source": [
     "1. The most sold products are mostly related to mobile/Laptop devices\n",
-    "2. These products are used frequently and can easily get damaged or lost due to its small size, reasons like this are seem to be the main contribution for sales of these top products.  "
+    "2. These products are used frequently and can easily get damaged, drained-out or lost due to its small size, reasons like this are seem to be the main contribution for sales of these top products.  "
    ]
   }
  ],
