--- a/Sales.ipynb
+++ b/Sales.ipynb
@@ -1273,7 +1273,7 @@
    "id": "727e78bb",
    "metadata": {},
    "source": [
-    "1. The most sold products are mostly related to mobile/Laptop devices\n",
+    "1. The most sold products are mostly related to mobile/Laptop or small devices like remote and tourch.\n",
     "2. These products are used frequently and can easily get damaged, drained-out or lost due to its small size, reasons like this are seem to be the main contribution for sales of these top products.  "
    ]
   }
